# coldplate

./: .gitignore  app.py  cluster.py  coldplate.ino  generate_sine.py  generate_snowflake.py  ir_simulator.py  metrics.py  nn.py  platformio.ini  setup_fleabot.sh  weights.h
assets/: generate_array.py
atmega/: coldplate.ino  generate_cosine.py  generate_snowflake.py
fleabot/: CMakeLists.txt  README.md
fleabot/include/: CatIdentifier.h  KMeansClustering.h  MLX90640Interface.h  SoundPlayer.h  Speaker.h  TVMInference.h  UART.h  UsbCamera.h
fleabot/src/: main.cpp
fleabot/src/clustering/: CatIdentifier.cpp  KMeansClustering.cpp
fleabot/src/models/: TVMInference.cpp
fleabot/src/network/: UART.cpp
fleabot/src/sensors/: MLX90640Interface.cpp  SoundPlayer.cpp  UsbCamera.cpp
fleabot/src/sound/: Speaker.cpp
include/: coldplate.h
server/: app.py  install_database.sh  models.py  process_images.py  requirements.txt  train_images.py  train_kmeans.py
server/ML/: autoencode.py  cluster.py  compile.py  construct_model.py  ir_simulator.py  train.py
server/ML/model_yamls/: better.yaml  default.yaml  depthwise.yaml  visualizer.yaml
server/templates/: index.html  visualization.html
server/utils/: cluster.py  drop_all.py  ir_simulator.py  metrics.py  rc_simulator.py
src/: coldplate.cpp  main.cpp
